--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-nestjs-typeorm",
+  "name": "party-everyday-server",
   "version": "1.0.0",
   "description": "",
   "author": "",
