--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,11 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "tabWidth": 3
+  "tabWidth": 3,
+  "semi": true,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "printWidth": 80,
+  "useTabs": false
 }
